# esp32_unittest_with_CMock

./: .gitmodules  CMakeLists.txt
.github/workflows/: test.yml
component_a/: CMakeLists.txt
component_b/: CMakeLists.txt  component_b.c  component_b.h
component_b/test/: CMakeLists.txt  test.c
component_c/: CMakeLists.txt  component_c.c  component_c_real.c
component_c/include/: component_c.h  component_c_mock.h  component_c_real.h
component_c/test/: CMakeLists.txt  test.c
component_d/: CMakeLists.txt  component_d.c  component_d.h
component_d/test/: CMakeLists.txt  test.c
mocks/: idf_component_mock.cmake  mock.cmake
mocks/component_a/: CMakeLists.txt
mocks/component_c_mock/: CMakeLists.txt
mocks/component_c_mock/mock/: mock_config.yaml
mocks/freertos_mock/: CMakeLists.txt
mocks/freertos_mock/freertos/: projdefs.h  semphr.h
mocks/freertos_mock/mock/: mock_config.yaml
